// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a loading animation 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 ibXKVu Button__StyledControl-sc-160jtek-2 gwUVcO"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="false"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      >
        <img
          alt="loading"
          class="loader right"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a danger button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 cRxecf Button__StyledControl-sc-160jtek-2 hyLBBz"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a disabled button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 ibXKVu Button__StyledControl-sc-160jtek-2 gwUVcO"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a link button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 fxImXR Button__StyledControl-sc-160jtek-2 hyLBBz"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a primary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 fqRIgt Button__StyledControl-sc-160jtek-2 hyLBBz"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a secondary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jegReI Button__StyledControl-sc-160jtek-2 hyLBBz"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a warning button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hZhAlI Button__StyledControl-sc-160jtek-2 hyLBBz"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 erdTQn"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 hYLvQc"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jSNwMo Button__StyledBox-sc-160jtek-0 bRXkTk"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jegReI Button__StyledControl-sc-160jtek-2 hyLBBz"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="LoadingIndicator__ProgressButtonStatusIndicator-sc-yaqsha-0 dXFjds Button__StyledLoadingIndicator-sc-160jtek-1 jrjaIB"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;
